refactor: Cleanup SpeedTest test case model